# MicroAccount

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/db/: bootstrap.py  session.py
app/documents/: __init__.py  extract.py  ingest.py  ocr.py  parse.py  schemas.py  temp_sessions.py
app/domain/: models.py
app/domain/policies/: uk.py
app/services/: accounting.py  income.py  labels.py
app/static/css/: components.css  layout.css  tokens.css
app/static/css/pages/: dashboard.css
app/static/js/: document-review.js
app/web/: routes.py
app/web/templates/: base.html  dashboard.html  dla.html  documents.html  expense_detail.html  expenses.html  income.html  index.html
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENT_PROCESSING.md  IA_UX_BLUEPRINT.md  IMPLEMENTATION_PLAN.md  PRODUCT_CONCEPT.md  ROADMAP.md  TOOLING.md  UK_RULES.md  V1_BLUEPRINT.md
scripts/: import_claude_pdfs.py
tests/: __init__.py  test_api_workflows.py  test_document_parser.py  test_expense_crud.py  test_foundation_docs.py  test_income.py
